[gd_scene load_steps=17 format=3 uid="uid://nbkvxn2q07p3"]

[ext_resource type="PackedScene" uid="uid://t462ol02sj2b" path="res://player/player.tscn" id="1_mox71"]
[ext_resource type="Texture2D" uid="uid://cha1lq6my42vd" path="res://all_chipone/art/placeholder_sala.png" id="2_us7gl"]
[ext_resource type="PackedScene" uid="uid://bfaxr7fpoeug3" path="res://boss/boss.tscn" id="3_l3pcv"]
[ext_resource type="PackedScene" uid="uid://dw3778j8p8khm" path="res://wheel/wheel.tscn" id="4_4yd00"]
[ext_resource type="Script" path="res://wheel/wheel_controller.gd" id="4_8q2er"]
[ext_resource type="Script" path="res://wheel/wheel_piece.gd" id="5_r6xhk"]
[ext_resource type="Resource" uid="uid://cd51mj4o87fnx" path="res://common/data/chipone_left_arm.tres" id="6_b6v0p"]
[ext_resource type="Resource" uid="uid://dm2uw67cvdvec" path="res://common/data/royal_left_arm.tres" id="7_qtfia"]
[ext_resource type="Resource" uid="uid://driterxd8nc7x" path="res://common/data/chipone_head.tres" id="8_8ghip"]
[ext_resource type="Resource" uid="uid://cj3vo1o5xhl6x" path="res://common/data/chipone_right_arm.tres" id="8_84gbf"]
[ext_resource type="Resource" uid="uid://bojoqa4lw1dre" path="res://common/data/royal_head_arm.tres" id="9_i0j6w"]
[ext_resource type="Resource" uid="uid://ynkcnl0gbcxa" path="res://common/data/royal_right_arm.tres" id="12_82cek"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_0josx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pnmae"]
size = Vector2(286, 20)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_yrdai"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_w114c"]
normal = Vector2(-1, 0)

[node name="PlayerTest" type="Node2D"]

[node name="Player" parent="." instance=ExtResource("1_mox71")]
position = Vector2(930, 448)

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(0, 850)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
shape = SubResource("WorldBoundaryShape2D_0josx")

[node name="IdeiaSala" type="Sprite2D" parent="."]
z_index = -2
texture = ExtResource("2_us7gl")
centered = false

[node name="Platform" type="StaticBody2D" parent="."]
position = Vector2(303, 572)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
position = Vector2(150, 14.5)
shape = SubResource("RectangleShape2D_pnmae")
one_way_collision = true

[node name="Platform2" type="StaticBody2D" parent="."]
position = Vector2(1321, 572)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform2"]
position = Vector2(150, 14.5)
shape = SubResource("RectangleShape2D_pnmae")
one_way_collision = true

[node name="Walls" type="StaticBody2D" parent="."]

[node name="Left" type="CollisionShape2D" parent="Walls"]
position = Vector2(92, 774)
shape = SubResource("WorldBoundaryShape2D_yrdai")

[node name="Right" type="CollisionShape2D" parent="Walls"]
position = Vector2(1829, 774)
shape = SubResource("WorldBoundaryShape2D_w114c")

[node name="BossBase" parent="." instance=ExtResource("3_l3pcv")]

[node name="WheelController" type="Node2D" parent="."]
script = ExtResource("4_8q2er")

[node name="LeftArmWheel" parent="WheelController" instance=ExtResource("4_4yd00")]
offset_left = 42.5
offset_top = 165.0
offset_right = 42.5
offset_bottom = 165.0
scale = Vector2(0.75, 0.75)
pieces = Array[ExtResource("5_r6xhk")]([ExtResource("6_b6v0p"), ExtResource("7_qtfia")])

[node name="HeadWheel" parent="WheelController" instance=ExtResource("4_4yd00")]
offset_left = 679.0
offset_top = 165.0
offset_right = 679.0
offset_bottom = 165.0
scale = Vector2(0.75, 0.75)
pieces = Array[ExtResource("5_r6xhk")]([ExtResource("8_8ghip"), ExtResource("9_i0j6w")])
spin_duration = 7.0

[node name="RightArmWheel" parent="WheelController" instance=ExtResource("4_4yd00")]
offset_left = 1320.0
offset_top = 165.0
offset_right = 1320.0
offset_bottom = 165.0
scale = Vector2(0.75, 0.75)
pieces = Array[ExtResource("5_r6xhk")]([ExtResource("8_84gbf"), ExtResource("12_82cek")])
spin_duration = 6.0
